--- a/squirrels/templates/squirrels/index.html
+++ b/squirrels/templates/squirrels/index.html
@@ -1,4 +1,10 @@
 <!doctype html>
 <html>
-	<body>Hi!<body>
+	<body>
+		<ul>
+			{% for row in f_csv %}
+			<li>{{row}}</li>
+			{% endfor %}
+		</ul>
+	</body>
 </html>
